--- a/Report/thesis_report.tex
+++ b/Report/thesis_report.tex
@@ -620,25 +620,25 @@ Sleep statistics, phone usage stats (on/off/present)\\
 	 & \textbf{temp} & \textbf{temp} & \textbf{rate} & & & & \textbf{type} & \textbf{type} & \textbf{turn}\\
 	
 	\hline
-	S11 & 30.97  &  &  &  &  &  & ?? & ?? & ??\\
+	S11 & 30.97 & 29.22 & 77.42 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S12 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S12 & 31.29 & 29.13 & 73,04 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S13 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S13 & 30.76 & 28.65 & 73.93 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S14 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S14 & 30.65 & 28.78 & 77.55 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S15 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S15 & 31.46 & 29.89 & 75.34 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S16 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S16 & 29,99 & 28.59 & 73.15 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S17 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S17 & 30.95 & 29.34 & 77.55 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S18 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S18 & 30.10 & 28.30 & 81.64 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S19 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S19 & 30.67 & 31.70 & 84.59 &  &  &  & ?? & ?? & ??\\
 	\hline
-	S20 &  &  &  &  &  &  & ?? & ?? & ??\\
+	S20 & 30.91 & 29.06 & 75.27 &  &  &  & ?? & ?? & ??\\
 	\hline
 	\end{tabular}
 	\caption{Average in total from beginning to March 31, 2016 - smartwatch.}
@@ -656,29 +656,98 @@ Sleep statistics, phone usage stats (on/off/present)\\
 	\hline
 	S11 & 30.59 & 31.27 & 30.91 & 30.86 & 31.20\\
 	\hline
-	S12 & 31.39 & 31.37 & 31.38 &  & \\
+	S12 & 31.39 & 31.37 & 31.08 & 31.15 & 31.44\\
 	\hline
 	S13 & 31.08 & 31.23 & 30.64 & 30.38 & 30.48\\
 	\hline
-	S14 & 30.56 & 30.60 & 31.01 & 30.75 & 30.36\\
+	S14 & 30.53 & 30.60 & 31.01 & 30.75 & 30.36\\
 	\hline
 	S15 & 31.63 & 31.70 & 31.40 & 31.20 & 31.38\\
 	\hline
-	S16 & - & 30.35 & 29.67 &  & \\
+	S16 & - & 30.24 & 29.67 & 30.06 & 30.02\\
 	\hline
-	S17 &  &  &  &  & \\
+	S17 & 31.29 & 30.95 & 30.88 & 30.73 & 30.88\\
 	\hline
-	S18 &  &  &  &  & \\
+	S18 & 30.03 & 29.23 & 30.01 & 30.27 & - \\
 	\hline
-	S19 &  &  &  &  & \\
+	S19 & 32.87 & 33.11 & - & - & -\\
 	\hline
-	S20 &  &  &  &  & \\
+	S20 & 30.81 & 31.12 & 30.83 & 30.79 & 31.02\\
 	\hline
 	\end{tabular}
 	\caption{Average skin temperature per month from beginning to March 31, 2016 - smartwatch.}
-	\label{tab:totalMinutesWatch}
+	\label{tab:skinMinutesWatch}
 \end{footnotesize}
 \end{table}
+
+\begin{table}[H]
+\center
+\begin{footnotesize}
+	\begin{tabular}{| c | c | c | c | c | c | c | c | c | c |}
+	\hline
+	\textbf{S\#} & \textbf{November} & \textbf{December} & \textbf{January} & \textbf{February} & \textbf{March} \\
+	
+	\hline
+	S11 & 28.71 & 29.41 & 29.20 & 29.11 & 29.22\\
+	\hline
+	S12 & 29.18 & 29.25 & 29.00 & 28.99 & 29.24	\\
+	\hline
+	S13 & 28.96 & 29.17 & 28.57 & 28.19 & 28.36\\
+	\hline
+	S14 & 28.60 & 28.64 & 29.22 & 28.95 & 28.50\\
+	\hline
+	S15 & 30.08 & 30.21 & 29.84 & 29.59 & 29.73\\
+	\hline
+	S16 & - & 28.82 & 28.26 & 28.65 & 28.61\\
+	\hline
+	S17 & 29.78 & 29.35 & 29.25 & 29.14 & 29.18\\
+	\hline
+	S18 & 28.30 & 28.21 & 28.11 & 28.43 & - \\
+	\hline
+	S19 & 31.48 & 31.76 & - & - & -\\
+	\hline
+	S20 & 29.34 & 28.99 & 28.90 & 29.25 & 28.83\\
+	\hline
+	\end{tabular}
+	\caption{Average air temperature per month from beginning to March 31, 2016 - smartwatch.}
+	\label{tab:airMinutesWatch}
+\end{footnotesize}
+\end{table}
+
+\begin{table}[H]
+\center
+\begin{footnotesize}
+	\begin{tabular}{| c | c | c | c | c | c | c | c | c | c |}
+	\hline
+	\textbf{S\#} & \textbf{November} & \textbf{December} & \textbf{January} & \textbf{February} & \textbf{March} \\
+	
+	\hline
+	S11 & 76.76 & 78.21 & 76.26 & 78.29 & 77.58\\
+	\hline
+	S12 & 73.47 & 74.24 & 75.25 & 70.33 & 71.91\\
+	\hline
+	S13 & 72.57 & 74.86 & 74.32 & 75.27 & 72.61\\
+	\hline
+	S14 & 78.44 & 76.30 & 77.65 & 77.30 & 78.06\\
+	\hline
+	S15 & 77.82 & 73.56 & 75.18 & 75.20 & 74.92\\
+	\hline
+	S16 & - & 72.89 & 72.80 & 74.31 & 72.59\\
+	\hline
+	S17 & 75.27 & 78.08 & 77.32 & 79.48 & 77.61\\
+	\hline
+	S18 & 80.88 & 82.15 & 86.23 & 79.48 & - \\
+	\hline
+	S19 & 87.41 & 83.89 & - & - & -\\
+	\hline
+	S20 & 74.19 & 72.02 & 73.81 & 79.56 & 76.75\\
+	\hline
+	\end{tabular}
+	\caption{Average heartrate per month from beginning to March 31, 2016 - smartwatch.}
+	\label{tab:heartrateWatch}
+\end{footnotesize}
+\end{table}
+
 
 
 
